# sprite-sheet-sfml

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp
assets/image/brawler/: sheet.xcf
src/: Background.cpp  Background.h  Camera.cpp  Camera.h  Enemy.cpp  Enemy.h  EventHandler.cpp  EventHandler.h  InputHandler.cpp  InputHandler.h  Movement.h  Player.cpp  Player.h  Scenario.cpp  Scenario.h  State.h  main.cpp
